--- a/views/index.haml
+++ b/views/index.haml
@@ -11,3 +11,5 @@
   %br
   %input{:type => 'submit'}
 
+%a{:href => 'https://github.com/miminashi/csv2json-web', :target => '_blank'}
+  %img{:style => 'position: absolute; top: 0; right: 0; border: 0;', :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png", :alt => "Fork me on GitHub"}
